--- a/css/css.css
+++ b/css/css.css
@@ -2,7 +2,14 @@
 body{background:#f7f7f7; color:#4c4c4c; font-size:14px; line-height:1.5; font-size-adjust:none; -webkit-text-size-adjust:none; min-width:300px;}
 body,input,button,select,optgroup,option,textarea,pre{font-family:Arial,Roboto,"Droid Sans","Hiragino Sans GB","Microsoft YaHei","Simsun",STXihei,"sans-serif";}
 
-.h1{width: 100%;height: 100%;margin:0;}
+#top{width: 100%;height: 40%; overflow: hidden;}
+.left{float: left;text-align: center; width: 50%; align-items: center; justify-content: center;line-height: 2.5rem;padding-top: 5%;}
+.left p{line-height: 2.5rem;font-size: 2rem;}
+.left p.butong{font-size: 2.5rem;color: #ea6b0d; padding-top: 8px;}
+.left p.gz{font-size: 1.5rem; padding-top: 8px;color: #676767;}
+.left p.hs{font-size: 1.0rem; color: #676767;}
+.h1{margin:0;}
+.h1 img{width: 40%;height:40%;float: right;padding: 20px;}
 .h2{width: 100%;height: 700px;background-color: #e8e8e8;margin:0;}
 .h2 li{padding:10px;list-style:none;border: 1px solid #bcbcbc; /* 设置边框 */
   margin-bottom: 5px; /* 设置元素之间的间隔 */
@@ -33,6 +40,8 @@ li a{ text-decoration: none;
     border-radius: 20px;
     background: linear-gradient(to right, #fe5244, #ff7840);
 	box-shadow: 0 3px 9px #ffbb9e;}
+/* 文科 */
+
 
 
 
